# zebra

./: Cargo.toml
patches/size-of-0.1.5/src/: core_impls.rs
zebra-chain/src/: lib.rs  transaction.rs  tze.rs
zebra-chain/src/transaction/: arbitrary.rs  builder.rs  serialize.rs
zebra-chain/src/transaction/tests/: vectors.rs
zebra-chain/src/transparent/: serialize.rs
zebra-consensus/: Cargo.toml
zebra-consensus/src/: error.rs  transaction.rs
zebra-consensus/src/transaction/: check.rs  tests.rs
zebra-consensus/src/transaction/tests/: prop.rs
zebra-script/: Cargo.toml
zebra-script/src/: lib.rs
zebra-state/src/: service.rs
zebra-state/src/service/check/tests/: nullifier.rs
zebra-state/src/service/finalized_state/tests/: prop.rs
zebra-tze-stwo/: Cargo.toml
zebra-tze-stwo/src/: lib.rs
zebrad/: Cargo.toml
zebrad/src/components/mempool/storage/tests/: prop.rs
