[package]
name = "zebra-tze-stwo"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Prototype STWO-Cairo Transparent Zcash Extension verifier for Zebra"

[dependencies]
thiserror = "1.0"
tracing = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
cairo-air = { git = "https://github.com/starkware-libs/stwo-cairo", rev = "62c3c4a", package = "cairo-air" }
stwo_cairo_prover = { git = "https://github.com/starkware-libs/stwo-cairo", rev = "62c3c4a" }
